==> MegaRoboSpace/MotorControl/MotorControl/Sources/Hardware/interrupt.c <==
#include <string.h>
#include "interrupt.h"
#include "softtimer.h"
#include "streambuffer.h"
#include "canmac.h"
#include "canphy.h"
#include "usartmac.h"
#include "usartphy.h"
#include "timer.h"

void EXTI2_IRQHandler(void)
{
#if 0
    static u8 irqCount = 0;
    
    if (EXTI_GetITStatus(EXTI_Line2) != RESET)
    {   
        EXTI_ClearFlag(EXTI_Line2);
        irqCount++;

#if ENCODER_TEST
        //if ((zeroSignalEnable) && (irqCount >= 3) && (delayCount == 1))
        if ((zeroSignalEnable) && (irqCount >= 1))
        {
            zeroSignalEnable = false;
            irqCount = 0;

#if FOREWART_TEST
            //正转
            TIM2->CNT = 0;
            tim2CountPre = 0; 
#else
            //反转
            TIM2->CNT = 4095;
            tim2CountPre = 4095; 
#endif

            arrayIndexPre = arrayIndex;
            
            if (encoderTestEnable)
            {
                encoderTestEnable = false;
                pwmOutputEnable   = false;
            }
            else
            {
                encoderTestEnable = true;
            }
        }
#endif
    }
#endif
}

void TIM2_IRQHandler(void)
{
    if (TIM_GetITStatus(TIM2, TIM_IT_Update) != RESET)
    {
        TIM_ClearFlag(TIM2, TIM_FLAG_Update);
    }
    else if (TIM_GetITStatus(TIM2, TIM_IT_CC3) != RESET)
    {
        TIM_ClearFlag(TIM2, TIM_IT_CC3);
    }
}

void TIM4_IRQHandler(void)
{
    if (TIM_GetITStatus(TIM4, TIM_IT_Update) != RESET)
    {
        TIM_ClearFlag(TIM4, TIM_FLAG_Update);

        //系统Tick加一
        g_systemMilliSecTick++;
    }
}
