==> MohdSaif44/turtle_bot/Core/Src/interrupt.c <==
#include "interrupt.h"
#include "common.h"
#define USED_QEI1
#define USED_QEI4
#define USED_QEI6

void TIM4_IRQHandler(void)
{

#ifdef USED_QEI4
	if (htim4.Instance -> CR1 == 129)
	{
		BIOS_QEI4.signbit += 1;
	}
	else if (htim4.Instance ->CR1 == 145)
	{
		BIOS_QEI4.signbit -= 1;
	}
	htim4.Instance -> SR = 0;
	QEIDelay(100);

#else
	HAL_TIM_IRQHandler(&htim4);

	return;
#endif

}

void TIM2_IRQHandler(void)
{
	HAL_TIM_IRQHandler(&htim2);
}

void EXTI2_IRQHandler(void) {
	/* USER CODE BEGIN EXTI3_IRQn 0 */
//	led6=!led6;
//	pwm_enc_callback(&ENC_C);

	/* USER CODE END EXTI3_IRQn 0 */
	HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_2);
	/* USER CODE BEGIN EXTI3_IRQn 1 */
	/* USER CODE END EXTI3_IRQn 1 */
}
